layout of combat tracker update

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -8,6 +8,7 @@ $body-bg-dark: #000000;
 $nav-link-color: $hcs-accent;
 $card-title-color: $hcs-accent;
 $primary: $hcs-accent;
+$secondary: $hcs-secondary;
 
 @import "/node_modules/bootstrap/scss/bootstrap";
 
@@ -24,5 +25,5 @@ h1.header_text{
 }
 
 h2.header_text{
-    letter-spacing: 4px;
+    letter-spacing: 3px;
 }
