--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 $hcs-accent: #f02e3f;
-$hcs-secondary: #c6dcb6;
+$hcs-secondary: #5cf5fd;
 
 $font-family-base: "Play", sans-serif;
 $body-bg-dark: #000000;
