new parser update

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -12,6 +12,11 @@ $secondary: $hcs-secondary;
 
 @import "/node_modules/bootstrap/scss/bootstrap";
 
+// ?? why
+.list-group-item-action {
+    color: var(--bs-list-group-color);
+}
+
 .header_text {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
