--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -32,3 +32,11 @@ h1.header_text{
 h2.header_text{
     letter-spacing: 3px;
 }
+
+.btn {
+    font-size: 0.8rem;
+    border-radius: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    vertical-align: middle;
+}
